# flowcar

./: apply.sh  dev.sh
.github/workflows/: docker.yml  kubernetes.yml  webapp.yml
k8s/database/: persistent-volume.yaml  postgresql-config.yaml  postgresql-deployment.yaml  postgresql-job.yaml
k8s/webapp/: flowcar-deployment.yaml  flowcar-ingress.yaml  flowcar-service.yaml
webapp/: .dockerignore  Cargo.toml  Dockerfile
webapp/end2end/tests/: homepage.spec.ts
webapp/src/: app.rs  database.rs  error.rs  lib.rs  main.rs  server.rs
webapp/src/components/: card.rs  carousel.rs  feature.rs  footer.rs  list.rs  mod.rs  nav.rs  pagination.rs  summary.rs
webapp/src/models/: category.rs  fuel.rs  media.rs  mod.rs  model.rs  transmission.rs  vehicle.rs
webapp/src/pages/: home.rs  mod.rs  not_found.rs  search.rs  vehicle.rs
webapp/style/: main.scss
